# parsantic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py  bench_extract.py
docs/: api.md  index.md
evals/: runner.py
evals/datasets/: coercion_v1.yaml  parsing_v1.yaml
examples/: demo.py  demo_llm.py
src/parsantic/: __init__.py  ai.py  api.py  coerce.py  fixing_parser.py  json_pointer.py  jsonish.py  patch.py  streaming.py  types.py  update.py
src/parsantic/extract/: __init__.py  alignment.py  chunking.py  formatting.py  options.py  pipeline.py  prompt.py  schema.py  tokenizer.py  types.py
src/parsantic/extract/providers/: __init__.py  base.py  factory.py  plugins.py  pydantic_ai_provider.py  registry.py  static.py
tests/: test_ai.py  test_coerce.py  test_coerce_advanced.py  test_corpus.py  test_eval_datasets.py  test_extract.py  test_jsonish_parser.py  test_markdown_parser.py  test_patch.py  test_provider_factory.py  test_update.py
